change to https

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>senseBox | Die Kiste mit Sinn</title>
     <meta name="description" content="">
 
-    <link rel="icon" href="http://www.sensebox.de/images/sensebox-favicon.png" type="image/png">
-    <link rel="stylesheet" href="http://www.sensebox.de/css/main.css">
-    <link rel="canonical" href="http://www.sensebox.de//de/books/">
-    <link rel="alternate" type="application/rss+xml" title="senseBox | Die Kiste mit Sinn" href="http://www.sensebox.de//feed.xml" />
+    <link rel="icon" href="https://www.sensebox.de/images/sensebox-favicon.png" type="image/png">
+    <link rel="stylesheet" href="https://www.sensebox.de/css/main.css">
+    <link rel="canonical" href="https://www.sensebox.de//de/books/">
+    <link rel="alternate" type="application/rss+xml" title="senseBox | Die Kiste mit Sinn" href="https://www.sensebox.de//feed.xml" />
 
 
     <!-- <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
@@ -54,8 +54,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://www.sensebox.de/">
-                            <img src="http://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; height=55px; max-width:180px; ">
+                        <a class="navbar-brand" href="https://www.sensebox.de/">
+                            <img src="https://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; height=55px; max-width:180px; ">
                         </a>
                     </div>
                 </div>
@@ -64,27 +64,27 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/products/">senseBox</a>
+                                <a href="https://www.sensebox.de/de/products/">senseBox</a>
                             </li>
 
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/osem/">openSenseMap</a>
+                                <a href="https://www.sensebox.de/de/osem/">openSenseMap</a>
                             </li>
 
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/docs/">Docs</a>
+                                <a href="https://www.sensebox.de/de/docs/">Docs</a>
                             </li>
 
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/background/">Hintergrund</a>
+                                <a href="https://www.sensebox.de/de/background/">Hintergrund</a>
                             </li>
 
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/press/">Presse</a>
+                                <a href="https://www.sensebox.de/de/press/">Presse</a>
                             </li>
 
                             <li class="navbar-item">
-                                <a href="http://www.sensebox.de/de/awards/">Förderung</a>
+                                <a href="https://www.sensebox.de/de/awards/">Förderung</a>
                             </li>
                         </ul>
                     </div>
@@ -113,8 +113,8 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="card">
-                                            <a href="http://www.sensebox.de/books/edu/de/index.html" style="text-decoration: none;">
-                                                <canvas class="price-header-bg" style="background-image: url(http://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
+                                            <a href="https://www.sensebox.de/books/edu/de/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
                                                 </div>
@@ -123,8 +123,8 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="card">
-                                            <a href="http://www.sensebox.de/books/home/de/index.html" style="text-decoration: none;">
-                                                <canvas class="price-header-bg" style="background-image: url(http://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
+                                            <a href="https://www.sensebox.de/books/home/de/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
                                                 </div>
@@ -136,8 +136,8 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="card">
-                                            <a href="http://www.sensebox.de/books/edu/en/index.html" style="text-decoration: none;">
-                                                <canvas class="price-header-bg" style="background-image: url(http://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
+                                            <a href="https://www.sensebox.de/books/edu/en/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
                                                 </div>
@@ -146,8 +146,8 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="card">
-                                            <a href="http://www.sensebox.de/books/home/en/index.html" style="text-decoration: none;">
-                                                <canvas class="price-header-bg" style="background-image: url(http://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
+                                            <a href="https://www.sensebox.de/books/home/en/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
                                                 </div>
@@ -175,27 +175,27 @@
                         <ul>
                             <li>
                                 <a href="http://www.gi-at-school.de" target="_blank">
-                                    <img src="http://www.sensebox.de/images/sponsors/giatschool.png" alt="giatschool Logo">
+                                    <img src="https://www.sensebox.de/images/sponsors/giatschool.png" alt="giatschool Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://ifgi.uni-muenster.de" target="_blank">
-                                    <img src="http://www.sensebox.de/images/sponsors/ifgi.png" alt="ifgi Logo">
+                                    <img src="https://www.sensebox.de/images/sponsors/ifgi.png" alt="ifgi Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.uni-muenster.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/sponsors/wwu.png" alt="wwu Logo">
+                                    <img src="https://www.sensebox.de/images/sponsors/wwu.png" alt="wwu Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.wissenschaftsjahr-zukunftsstadt.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/sponsors/zukunftsstadt.png" alt="wwu Logo">
+                                    <img src="https://www.sensebox.de/images/sponsors/zukunftsstadt.png" alt="wwu Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="http://www.photonik-campus.de/make-light/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/sponsors/make-light.png" alt="wwu Logo">
+                                    <img src="https://www.sensebox.de/images/sponsors/make-light.png" alt="wwu Logo">
                                 </a>
                             </li>
                         </ul>
@@ -210,27 +210,27 @@
                         <ul>
                             <li>
                                 <a href="http://www.heise.de" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/ctmagazin.jpg" alt="c`t Logo">
+                                    <img src="https://www.sensebox.de/images/press/ctmagazin.jpg" alt="c`t Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="http://iq.intel.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/Intel-logo.png" alt="Intel Logo">
+                                    <img src="https://www.sensebox.de/images/press/Intel-logo.png" alt="Intel Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.wdr.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/westdeutscher-rundfunk.jpg" alt="WDR Logo">
+                                    <img src="https://www.sensebox.de/images/press/westdeutscher-rundfunk.jpg" alt="WDR Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.rbb-online.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/rbb.jpg" alt="rbb Logo">
+                                    <img src="https://www.sensebox.de/images/press/rbb.jpg" alt="rbb Logo">
                                 </a>
                             </li>
                             <li>
                                 <a href="http://www.deutschlandradio.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/logo-deutschlandfunk.preview.jpg" alt="Deutschlandradio Logo">
+                                    <img src="https://www.sensebox.de/images/press/logo-deutschlandfunk.preview.jpg" alt="Deutschlandradio Logo">
                                 </a>
                             </li>
                             <li>
@@ -240,7 +240,7 @@
                             </li>
                             <li>
                                 <a href="http://smart-magazine.com/en/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/smart_logo.jpg" alt="smart Logo">
+                                    <img src="https://www.sensebox.de/images/press/smart_logo.jpg" alt="smart Logo">
                                 </a>
                             </li>
                             <li>
@@ -250,7 +250,7 @@
                             </li>
                             <li>
                                 <a href="http://www.aktion-mensch.de/" target="_blank">
-                                    <img src="http://www.sensebox.de/images/press/AM_Logo_RGB.png" alt="Aktion Mesch Logo">
+                                    <img src="https://www.sensebox.de/images/press/AM_Logo_RGB.png" alt="Aktion Mesch Logo">
                                 </a>
                             </li>
                         </ul>
@@ -268,7 +268,7 @@
                             <div class="footer-content">
                                 <ul>
                                     <!--<li><a href="/news/index.html">Blog</a></li>-->
-                                    <li><a href="http://www.sensebox.de/hackathon">Hackathon</a></li>
+                                    <li><a href="https://www.sensebox.de/hackathon">Hackathon</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -278,11 +278,11 @@
                             </div>
                             <div class="footer-content">
                                 <ul>
-                                    <li><a href="http://www.sensebox.de/de/background/">Über uns</a></li>
-                                    <li><a href="http://www.sensebox.de/de/background/#philosophie">Philosophie</a></li>
-                                    <li><a href="http://www.sensebox.de/de/background/#team">Team</a></li>
-                                    <li><a href="http://www.sensebox.de/de/awards/">Auszeichnungen</li>
-          		<li><a href="http://www.sensebox.de/de/contact/">Impressum und Kontakt</a></li>
+                                    <li><a href="https://www.sensebox.de/de/background/">Über uns</a></li>
+                                    <li><a href="https://www.sensebox.de/de/background/#philosophie">Philosophie</a></li>
+                                    <li><a href="https://www.sensebox.de/de/background/#team">Team</a></li>
+                                    <li><a href="https://www.sensebox.de/de/awards/">Auszeichnungen</li>
+          		<li><a href="https://www.sensebox.de/de/contact/">Impressum und Kontakt</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -292,9 +292,9 @@
                             </div>
                             <div class="footer-content">
                                 <ul>
-                                    <li><a href="http://www.sensebox.de/de/press/">Berichte</a></li>
-                                    <li><a href="http://www.sensebox.de/de/materials/">Material</li>
-              <li><a href="http://www.sensebox.de/de/contact/">Kontakt</a></li>
+                                    <li><a href="https://www.sensebox.de/de/press/">Berichte</a></li>
+                                    <li><a href="https://www.sensebox.de/de/materials/">Material</li>
+              <li><a href="https://www.sensebox.de/de/contact/">Kontakt</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -304,7 +304,7 @@
                             </div>
                             <div class="footer-content">
                                 <ul>
-                                    <li><a href="http://www.sensebox.de/de/docs/">Docs</a></li>
+                                    <li><a href="https://www.sensebox.de/de/docs/">Docs</a></li>
                                     <li>Bachelor-Arbeiten</li>
                                 </ul>
                             </div>
@@ -316,13 +316,13 @@
                             <div class="footer-content">
                                 <ul>
                                     <li>
-                                        <a href="https://twitter.com/sensebox_de" target="_blank"><img src="http://www.sensebox.de/images/iconmonstr-twitter-4-icon.png"> Twitter</a>
+                                        <a href="https://twitter.com/sensebox_de" target="_blank"><img src="https://www.sensebox.de/images/iconmonstr-twitter-4-icon.png"> Twitter</a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/sensebox.de" target="_blank"><img src="http://www.sensebox.de/images/iconmonstr-facebook-4-icon.png"> Facebook</a>
+                                        <a href="https://www.facebook.com/sensebox.de" target="_blank"><img src="https://www.sensebox.de/images/iconmonstr-facebook-4-icon.png"> Facebook</a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/sensebox" target="_blank"><img src="http://www.sensebox.de/images/iconmonstr-github-icon.png"> Github</a>
+                                        <a href="https://github.com/sensebox" target="_blank"><img src="https://www.sensebox.de/images/iconmonstr-github-icon.png"> Github</a>
                                     </li>
                                 </ul>
                             </div>
