--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="text/javascript" src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>-->
 
 
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
