--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
 
     <link rel="icon" href="https://www.sensebox.de/images/sensebox-favicon.png" type="image/png">
-    <link rel="stylesheet" href="https://www.sensebox.de/css/main.css">
+    <link rel="stylesheet" href="https://sensebox.de/css/main.css">
     <link rel="canonical" href="https://www.sensebox.de//de/books/">
     <link rel="alternate" type="application/rss+xml" title="senseBox | Die Kiste mit Sinn" href="https://www.sensebox.de//feed.xml" />
 
