add osem to books page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </div>
                                 <h3>Deutsch</h3>
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <div class="card">
                                             <a href="https://www.sensebox.de/books/edu/de/index.html" style="text-decoration: none;">
                                                 <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
@@ -121,7 +121,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <div class="card">
                                             <a href="https://www.sensebox.de/books/home/de/index.html" style="text-decoration: none;">
                                                 <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
@@ -131,10 +131,20 @@
                                             </a>
                                         </div>
                                     </div>
+                                    <div class="col-md-4">
+                                        <div class="card">
+                                            <a href="https://www.sensebox.de/books/osem/de/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
+                                                <div class="price-text" style="padding:20px;">
+                                                    <h3>openSenseMap</h3>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <h3>English</h3>
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <div class="card">
                                             <a href="https://www.sensebox.de/books/edu/en/index.html" style="text-decoration: none;">
                                                 <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
@@ -144,12 +154,22 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <div class="card">
                                             <a href="https://www.sensebox.de/books/home/en/index.html" style="text-decoration: none;">
                                                 <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="card">
+                                            <a href="https://www.sensebox.de/books/osem/en/index.html" style="text-decoration: none;">
+                                                <canvas class="price-header-bg" style="background-image: url(https://www.sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
+                                                <div class="price-text" style="padding:20px;">
+                                                    <h3>openSenseMap</h3>
                                                 </div>
                                             </a>
                                         </div>
